Alter background, modify header, fix spacing within list view

--- a/concertFinder/concertFinder/static/concertFinder/index.css
+++ b/concertFinder/concertFinder/static/concertFinder/index.css
@@ -17,7 +17,6 @@
     border-style: solid;
     border-width: 10px;
     border-color: aquamarine;
-    height: 80vh;
     width: 800px;
 }
 
@@ -48,18 +47,31 @@
 }
 
 header {
-    font-size: 4rem;
-    font-family: 'Bungee Spice';
-    margin: 1rem 0;
     text-align: center;
 }
+
+header h2 {
+    margin-top: 0;
+}
+
+header h1{
+    font-size: 3rem;
+    font-family: 'Bungee Spice';
+    margin-bottom: 0;
+}
+
 body {
-    background: linear-gradient(180deg, #ff9ec7 0%, #ffd7ce 53.65%);
+    background-color: lightcyan;
+    font-family: 'Helvetica Neue';
 }
 
 .leftContainer {
+    max-width: 500px;
     width: 45%;
     height: 80vh;
+    background: linear-gradient(180deg, #ff9ec7 0%, #ffd7ce 53.65%);
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .input-container {
@@ -85,6 +97,7 @@ form{
     align-items: center;
     flex-direction: row;
     justify-content: center;
+    margin-top: 10px;
 }
 
 #submit-btn {
@@ -113,6 +126,7 @@ form{
     gap: 30px;
     border-radius: 0.75rem;
     padding-left: 40px;
+    margin: 0 12px;
 }
 
 .concert-list li:hover {
@@ -125,14 +139,15 @@ form{
     overflow-y: scroll;
     display: none;
     height: 88%;
+    padding: 0 5px;
 }
 
 
 .date-list-view {
-    min-width: 20%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 22%
 }
 
 .list-month-date {
@@ -142,4 +157,8 @@ form{
 .headliner-link {
     color: inherit;
     text-decoration: none;
+}
+
+.venue-list-view {
+    width:80%;
 }
